<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/imgBicycle"
        android:layout_width="147dp"
        android:layout_height="106dp"
        android:layout_marginStart="24dp"
        android:layout_marginLeft="24dp"
        android:layout_marginTop="84dp"
        android:contentDescription="@string/img1Descript"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/bicycle" />

    <ImageView
        android:id="@+id/imgPatio"
        android:layout_width="135dp"
        android:layout_height="97dp"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="40dp"
        android:contentDescription="@string/img3Descript"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imgDresser"
        app:srcCompat="@drawable/patio" />

    <Button
        android:id="@+id/btnBike"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="116dp"
        android:text="@string/btnText"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/imgBicycle"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btnDresser"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="100dp"
        android:layout_marginEnd="56dp"
        android:layout_marginRight="56dp"
        android:text="@string/btnText"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imgBicycle" />

    <Button
        android:id="@+id/btnPatio"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="68dp"
        android:text="@string/btnText"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.588"
        app:layout_constraintStart_toEndOf="@+id/imgPatio"
        app:layout_constraintTop_toBottomOf="@+id/imgDresser" />

    <ImageView
        android:id="@+id/imgDresser"
        android:layout_width="94dp"
        android:layout_height="131dp"
        android:layout_marginTop="64dp"
        android:contentDescription="@string/img2Descript"
        app:layout_constraintEnd_toStartOf="@+id/btnDresser"
        app:layout_constraintHorizontal_bias="0.255"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imgBicycle"
        app:srcCompat="@drawable/ikeadresser" />
</androidx.constraintlayout.widget.ConstraintLayout>